# libxmp

./: CMakeLists.txt
src/: libxmp.cpp
src/public/include/: XMP_Const.h
src/source/XMPFiles/source/FileHandlers/: MPEG4_Handler.cpp  SonyHDV_Handler.cpp
src/source/XMPFiles/source/FormatSupport/: PostScript_Support.cpp  PostScript_Support.hpp  QuickTime_Support.cpp  QuickTime_Support.hpp  XMPScanner.cpp
src/source/XMPFiles/source/PluginHandler/: PluginManager.cpp  PluginManager.h  XMPAtoms.cpp  XMPAtoms.h
